fixed footer and spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,51 +1,38 @@
-/*body {
-  color: #fff;
-  font-family: arial;
-  background: url('/static/imgs/index/palm_trees_sunglow.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}*/
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(30, 1fr;)
-  grid-gap: 5px
-  max-width: 960px;
-  margin: 0 auto;
-  text-align: center;
-  grid-gap: 10px;
+* {
+    box-sizing: border-box;
 }
 
-/*-----give areas backgrounds for setting up ----*/
-/*.wrapper div {
-  background: #3bbced;
+#content {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: minmax(100px, auto);
+  max-width: 960px;
+  margin: 0 auto;
+  grid-gap: 10px;
+  grid-template-areas: "head head head head head head head head head head head head"
+                       "nav nav nav nav nav nav nav nav nav nav nav nav"
+                       "main main main main main main main main main main main main"
+                       "foot foot foot foot foot foot foot foot foot foot foot foot"
+}
+
+#content > * {
+  bacground:#3bbced;
+  /*padding: 30px;*/
+}
+
+header {
+  grid-area: head;
+  border: 1px solid black;
+  text-align: center;
+}
+.title h1 {
+  font-family: 'Niconne', cursive;
   padding: 30px;
 }
 
-.wrapper div:nth-child(even) {
-  background: #777;
-}*/
-
-
-.title {
-  grid-row: 5/7;
-  grid-column: 4/10;
-  font-size: 36px;
-  font-family: 'Niconne', cursive;
-}
-
-
-/*----Navbar Area----*/
-.nav-top {
-  grid-row: 9/10;
-  grid-column: 2/12;
-
-  /*display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;8?*/
+nav {
+  grid-area: nav;
+  border: 1px solid black;
 }
 
 .nav-top a {
@@ -55,101 +42,128 @@
   font-weight: 500;
 }
 
-/*.nav div {
+
+main {
+  grid-area: main;
   border: 1px solid black;
-  padding: 10px;
-  margin: 0;
-  font-style: italic;
-}*/
 
-/*-------------------------------*/
-/*----Index Main Content Area----*/
-/*-------------------------------*/
-
-.main {
-  grid-row: 14;
-  grid-column: 1/13;
-  grid-auto-rows: minmax(200px, auto);
-  font-size: 80px;
-  font-family: 'Lobster', cursive;
-  color: #186D6E;
-  text-shadow: #ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
 }
 
-.main p {
-  text-align: center;
-}
-/*-------------------*/
-/*----Footer Area----*/
-/*-------------------*/
+.main-content {
+  /*grid-auto-rows: minmax(200px, auto);*/
 
-.footer {
-  grid-row: 29/31;
-  grid-column: 1/13;
+}
+
+
+footer {
+  grid-area: foot;
+  border: 1px solid black;
+}
+
+.foot {
   display: grid;
   grid-template-columns: repeat(12,1fr);
-  grid-auto-rows: minmax(200px, auto);
+  grid-template-rows: repeat(2, 1fr);
   background-color: rgba(255, 255, 255, 0.7);
 }
 
+
 .booking-options {
-  grid-column: 4/5;
-  grid-row: 1/4;
-  padding-top: 20px;
+  grid-column: 2/5;
+  grid-row: 1/2;
+  border: 1px solid black;
 }
+
 
 .booking-options h3 {
   font-style: italic;
   text-decoration: underline;
   font-family: 'Niconne', cursive;
+  border: 1px solid black;
 }
+
 
 .booking-options p {
   font-size: 15px;
   font-family: 'Catamaran', sans-serif;
+  border: 1px solid black;
 }
 
 
 .locations {
-  grid-row: 1/4;
-  grid-column: 6/8;
-  padding-top: 20px;
+  grid-row: 1;
+  grid-column: 7/9;
+  border: 1px solid black;
 }
+
 
 .locations h3 {
   font-style: italic;
   text-decoration: underline;
   font-family: 'Niconne', cursive;
+  border: 1px solid black;
 }
+
 
 .locations p {
   font-size: 15px;
   font-family: 'Catamaran', sans-serif;
+  border: 1px solid black;
 }
 
 
 .email {
-  grid-column: 9/10;
-  grid-row: 1/2;
-  padding-top: 20px
+  grid-column: 11/12;
+  grid-row: 1;
+  border: 1px solid black;
 }
+
 
 .email h3 {
   font-style: italic;
   text-decoration: underline;
   font-family: 'Niconne', cursive;
+  border: 1px solid black;
 }
+
 
 .email p {
   font-size: 15px;
   font-family: 'Catamaran', sans-serif;
+  border: 1px solid black;
 }
+
 
 .social-media{
-  grid-column: 9/10;
-  grid-row: 3/4;
+  grid-column: 9/11;
+  grid-row: 2/3;
+  border: 1px solid black;
 }
 
+.tax-info {
+  grid-row: 2/3;
+  grid-column: 3/8;
+}
+
+
+.tax-info h3 {
+  font-style: italic;
+  text-decoration: underline;
+  font-family: 'Niconne', cursive;
+}
+
+
+/*----------------------*/
+/*----index.html css----*/
+/*----------------------*/
+
+.index-content {
+  font-size: 80px;
+  font-family: 'Lobster', cursive;
+  color: #186D6E;
+  text-shadow: #ffffff 3px 3px 0px, rgba(0, 0, 0, 0.2) 6px 6px 0px;
+  text-align: center
+}
 
 
 
@@ -157,21 +171,27 @@
 /*----condos.html css---------*/
 /*----------------------------*/
 
-
 .condos-block {
-  grid-row: 14;
-  grid-column: 3/11;
   display: grid;
   grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(12, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  grid-gap: 20px;
+  /*background-color: rgba(255, 255, 255, 0.7);*/
 
+}
+
+.condos-title {
+  grid-row: 1/3;
+  grid-column: 1/12;
+  font-family: 'Niconne', cursive;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.7)
 }
 
 
 .kkn-box {
-  grid-row: 1/6;
-  grid-column: 1/13;
-  border: 1px solid black;
+  grid-row: 3;
+  grid-column: 1/12;
   background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 5px 5px 5px black;
 }
@@ -182,17 +202,61 @@
 }
 
 
-
-
 .ps-box {
-  grid-row: 7/12;
-  grid-column: 1/13;
+  grid-row: 5;
+  grid-column: 1/12;
   border: 1px solid black;
   background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 5px 5px 5px black;
 }
 
+
 .ps-box img {
   width: 100%;
   height: auto;
+}
+
+
+/*------------------*/
+/*-----kkn page-----*/
+/*------------------*/
+
+.kkn-content {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  grid-gap: 1rem;
+  /*background-color: rgba(255, 255, 255, 0.85);*/
+}
+
+.kkn-content h3 {
+  font-family: 'Niconne', cursive;
+}
+
+.kkn-description {
+  grid-row: 1;
+  grid-column: 1/12;
+  padding: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(255, 255, 255, 0.85)
+}
+
+
+
+.kkn-video {
+  grid-column: 3/10;
+  align-self: center;
+  justify-self: center;
+}
+
+.kkn-photos {
+  grid-column: 1/12;
+  border: 1px solid black;
+}
+
+.kkn-info {
+  grid-column: 1/12;
+  padding: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(255, 255, 255, 0.85)
 }
